[gd_scene load_steps=30 format=2]

[ext_resource path="res://src/Notation.gd" type="Script" id=1]
[ext_resource path="res://scenes/chessmen.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/AI_utils.gd" type="Script" id=3]
[ext_resource path="res://icons/back.png" type="Texture" id=4]
[ext_resource path="res://src/BoardOutput.gd" type="Script" id=5]
[ext_resource path="res://hex_chess.gdns" type="Script" id=6]
[ext_resource path="res://fonts/Russo_One.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://res/menu_buttons.tres" type="StyleBox" id=17]
[ext_resource path="res://res/chess_tileset.tres" type="TileSet" id=18]
[ext_resource path="res://src/Multiplayer.gd" type="Script" id=19]
[ext_resource path="res://src/Singleplayer.gd" type="Script" id=22]
[ext_resource path="res://src/Game.gd" type="Script" id=23]
[ext_resource path="res://fonts/NixieOne.ttf" type="DynamicFontData" id=24]
[ext_resource path="res://src/NotationOutput.gd" type="Script" id=25]
[ext_resource path="res://src/Save.gd" type="Script" id=26]
[ext_resource path="res://src/Load.gd" type="Script" id=27]
[ext_resource path="res://res/load_theme.tres" type="Theme" id=28]

[sub_resource type="Theme" id=12]

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=14]
font_data = ExtResource( 24 )

[sub_resource type="DynamicFont" id=15]
font_data = ExtResource( 24 )

[sub_resource type="DynamicFont" id=16]
font_data = ExtResource( 24 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 16 )

[sub_resource type="InputEventAction" id=8]
action = "ui_accept"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 8 )

[sub_resource type="InputEventAction" id=9]
action = "ui_cancel"

[sub_resource type="ShortCut" id=10]
shortcut = SubResource( 9 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 16 )

[sub_resource type="Theme" id=13]

[node name="World" type="Node"]

[node name="Background" type="ColorRect" parent="."]
margin_left = -1080.0
margin_top = -669.0
margin_right = 1178.0
margin_bottom = 660.0
mouse_filter = 2
color = Color( 0.196078, 0.247059, 0.282353, 1 )

[node name="Singleplayer" type="Node" parent="."]
script = ExtResource( 22 )

[node name="Multiplayer" type="Node" parent="."]
script = ExtResource( 19 )

[node name="Notation" type="Node" parent="."]
script = ExtResource( 1 )

[node name="NotationOutput" type="Node" parent="."]
script = ExtResource( 25 )

[node name="Save" type="Node" parent="."]
script = ExtResource( 26 )

[node name="Load" type="Node" parent="."]
script = ExtResource( 27 )

[node name="Game" type="Node2D" parent="."]
script = ExtResource( 23 )

[node name="AI_utils" type="Node" parent="Game"]
script = ExtResource( 3 )

[node name="ChessEngine" type="Node" parent="Game"]
script = ExtResource( 6 )

[node name="Chessmen" parent="Game" instance=ExtResource( 2 )]

[node name="TileMap" type="TileMap" parent="Game"]
tile_set = ExtResource( 18 )
cell_size = Vector2( 82, 98 )
cell_half_offset = 1
centered_textures = true
format = 1
script = ExtResource( 5 )

[node name="HUD" type="CanvasLayer" parent="Game"]

[node name="Announcement" type="Panel" parent="Game/HUD"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = -31.0
margin_right = 180.0
margin_bottom = 31.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/panel = ExtResource( 17 )

[node name="Announcement" type="Label" parent="Game/HUD/Announcement"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -142.0
margin_top = -14.0
margin_right = 142.0
margin_bottom = 14.0
theme = SubResource( 12 )
custom_fonts/font = SubResource( 6 )
text = "White is checkmated"
align = 1
valign = 1

[node name="NotationPanel" type="Panel" parent="Game/HUD"]
margin_left = 800.0
margin_top = 80.0
margin_right = 990.0
margin_bottom = 520.0
custom_styles/panel = ExtResource( 17 )

[node name="ScrollContainer" type="ScrollContainer" parent="Game/HUD/NotationPanel"]
margin_left = 5.0
margin_top = 15.0
margin_right = 175.0
margin_bottom = 440.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="Game/HUD/NotationPanel/ScrollContainer"]
margin_right = 168.0
margin_bottom = 25.0

[node name="TurnContainer" type="HBoxContainer" parent="Game/HUD/NotationPanel/ScrollContainer/VBoxContainer"]
margin_right = 168.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )

[node name="TurnNumber" type="Label" parent="Game/HUD/NotationPanel/ScrollContainer/VBoxContainer/TurnContainer"]
margin_right = 20.0
margin_bottom = 25.0
rect_min_size = Vector2( 20, 25 )
custom_fonts/font = SubResource( 14 )

[node name="white" type="RichTextLabel" parent="Game/HUD/NotationPanel/ScrollContainer/VBoxContainer/TurnContainer"]
margin_left = 24.0
margin_right = 94.0
margin_bottom = 25.0
rect_min_size = Vector2( 70, 0 )
custom_fonts/normal_font = SubResource( 15 )
bbcode_enabled = true

[node name="black" type="RichTextLabel" parent="Game/HUD/NotationPanel/ScrollContainer/VBoxContainer/TurnContainer"]
margin_left = 98.0
margin_right = 168.0
margin_bottom = 25.0
rect_min_size = Vector2( 70, 0 )
custom_fonts/normal_font = SubResource( 16 )
bbcode_enabled = true

[node name="SaveLoad" type="VBoxContainer" parent="Game/HUD/NotationPanel"]
margin_top = 445.0
margin_right = 190.0
margin_bottom = 489.0

[node name="SaveGame" type="Button" parent="Game/HUD/NotationPanel/SaveLoad"]
margin_right = 190.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 7 )
custom_styles/hover = ExtResource( 17 )
custom_styles/pressed = ExtResource( 17 )
custom_styles/focus = ExtResource( 17 )
custom_styles/disabled = ExtResource( 17 )
custom_styles/normal = ExtResource( 17 )
shortcut_in_tooltip = false
shortcut = SubResource( 5 )
text = "save game"

[node name="LoadGame" type="Button" parent="Game/HUD/NotationPanel/SaveLoad"]
margin_top = 23.0
margin_right = 190.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 7 )
custom_styles/hover = ExtResource( 17 )
custom_styles/pressed = ExtResource( 17 )
custom_styles/focus = ExtResource( 17 )
custom_styles/disabled = ExtResource( 17 )
custom_styles/normal = ExtResource( 17 )
shortcut_in_tooltip = false
shortcut = SubResource( 5 )
text = "load game"

[node name="AIPanel" type="Panel" parent="Game/HUD"]
visible = false
margin_left = 60.0
margin_top = 80.0
margin_right = 250.0
margin_bottom = 520.0
custom_styles/panel = ExtResource( 17 )

[node name="VBoxContainer" type="VBoxContainer" parent="Game/HUD/AIPanel"]
margin_left = 10.0
margin_top = 6.0
margin_right = 183.0
margin_bottom = 441.0
custom_constants/separation = 35

[node name="Label" type="Label" parent="Game/HUD/AIPanel/VBoxContainer"]
margin_right = 173.0
margin_bottom = 41.0
theme = ExtResource( 28 )
text = "Computer opponent 
settings"
align = 1

[node name="Depth" type="VBoxContainer" parent="Game/HUD/AIPanel/VBoxContainer"]
margin_top = 76.0
margin_right = 173.0
margin_bottom = 150.0

[node name="DepthLabel" type="Label" parent="Game/HUD/AIPanel/VBoxContainer/Depth"]
margin_right = 173.0
margin_bottom = 41.0
theme = ExtResource( 28 )
text = "Depth of search
 (half-turns)"

[node name="SearchDepth" type="SpinBox" parent="Game/HUD/AIPanel/VBoxContainer/Depth"]
margin_top = 45.0
margin_right = 173.0
margin_bottom = 74.0
theme = ExtResource( 28 )
min_value = 2.0
max_value = 10.0
value = 4.0

[node name="Colors" type="VBoxContainer" parent="Game/HUD/AIPanel/VBoxContainer"]
margin_top = 185.0
margin_right = 173.0
margin_bottom = 266.0

[node name="Colors" type="Label" parent="Game/HUD/AIPanel/VBoxContainer/Colors"]
margin_right = 173.0
margin_bottom = 19.0
theme = ExtResource( 28 )
text = "Computer colors"

[node name="White" type="CheckBox" parent="Game/HUD/AIPanel/VBoxContainer/Colors"]
margin_top = 23.0
margin_right = 173.0
margin_bottom = 50.0
theme = ExtResource( 28 )
text = "white"

[node name="Black" type="CheckBox" parent="Game/HUD/AIPanel/VBoxContainer/Colors"]
margin_top = 54.0
margin_right = 173.0
margin_bottom = 81.0
theme = ExtResource( 28 )
pressed = true
text = "black"

[node name="Status" type="Label" parent="Game/HUD/AIPanel"]
margin_left = 10.0
margin_top = 410.0
margin_right = 157.0
margin_bottom = 429.0
theme = ExtResource( 28 )
text = "Opponent is ready"
valign = 2

[node name="EndGame" type="VBoxContainer" parent="Game/HUD"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -85.0
margin_top = 40.0
margin_right = 85.0
margin_bottom = 122.0

[node name="TryAgain" type="Button" parent="Game/HUD/EndGame"]
margin_right = 170.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 7 )
custom_styles/hover = ExtResource( 17 )
custom_styles/pressed = ExtResource( 17 )
custom_styles/focus = ExtResource( 17 )
custom_styles/disabled = ExtResource( 17 )
custom_styles/normal = ExtResource( 17 )
shortcut_in_tooltip = false
shortcut = SubResource( 5 )
text = "try again?"

[node name="SaveGame" type="Button" parent="Game/HUD/EndGame"]
margin_top = 23.0
margin_right = 170.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 7 )
custom_styles/hover = ExtResource( 17 )
custom_styles/pressed = ExtResource( 17 )
custom_styles/focus = ExtResource( 17 )
custom_styles/disabled = ExtResource( 17 )
custom_styles/normal = ExtResource( 17 )
shortcut_in_tooltip = false
shortcut = SubResource( 5 )
text = "save game"

[node name="Exit" type="Button" parent="Game/HUD/EndGame"]
margin_top = 46.0
margin_right = 170.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 7 )
custom_styles/hover = ExtResource( 17 )
custom_styles/pressed = ExtResource( 17 )
custom_styles/focus = ExtResource( 17 )
custom_styles/disabled = ExtResource( 17 )
custom_styles/normal = ExtResource( 17 )
shortcut_in_tooltip = false
shortcut = SubResource( 10 )
text = "return to menu"

[node name="DrawOffer" type="VBoxContainer" parent="Game/HUD"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -85.0
margin_top = 40.0
margin_right = 85.0
margin_bottom = 122.0

[node name="Accept" type="Button" parent="Game/HUD/DrawOffer"]
margin_right = 170.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 7 )
custom_styles/hover = ExtResource( 17 )
custom_styles/pressed = ExtResource( 17 )
custom_styles/focus = ExtResource( 17 )
custom_styles/disabled = ExtResource( 17 )
custom_styles/normal = ExtResource( 17 )
shortcut_in_tooltip = false
shortcut = SubResource( 5 )
text = "accept"

[node name="Decline" type="Button" parent="Game/HUD/DrawOffer"]
margin_top = 23.0
margin_right = 170.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 7 )
custom_styles/hover = ExtResource( 17 )
custom_styles/pressed = ExtResource( 17 )
custom_styles/focus = ExtResource( 17 )
custom_styles/disabled = ExtResource( 17 )
custom_styles/normal = ExtResource( 17 )
shortcut_in_tooltip = false
shortcut = SubResource( 10 )
text = "decline"

[node name="PromotionBox" type="HBoxContainer" parent="Game/HUD"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -206.0
margin_top = -20.0
margin_right = 206.0
margin_bottom = 20.0

[node name="Bishop" type="Button" parent="Game/HUD/PromotionBox"]
margin_right = 100.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = SubResource( 11 )
custom_styles/hover = ExtResource( 17 )
custom_styles/pressed = ExtResource( 17 )
custom_styles/focus = ExtResource( 17 )
custom_styles/disabled = ExtResource( 17 )
custom_styles/normal = ExtResource( 17 )
text = "Bishop"

[node name="Knight" type="Button" parent="Game/HUD/PromotionBox"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = SubResource( 11 )
custom_styles/hover = ExtResource( 17 )
custom_styles/pressed = ExtResource( 17 )
custom_styles/focus = ExtResource( 17 )
custom_styles/disabled = ExtResource( 17 )
custom_styles/normal = ExtResource( 17 )
text = "Knight"

[node name="Rook" type="Button" parent="Game/HUD/PromotionBox"]
margin_left = 208.0
margin_right = 308.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = SubResource( 11 )
custom_styles/hover = ExtResource( 17 )
custom_styles/pressed = ExtResource( 17 )
custom_styles/focus = ExtResource( 17 )
custom_styles/disabled = ExtResource( 17 )
custom_styles/normal = ExtResource( 17 )
text = "Rook"

[node name="Queen" type="Button" parent="Game/HUD/PromotionBox"]
margin_left = 312.0
margin_right = 412.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = SubResource( 11 )
custom_styles/hover = ExtResource( 17 )
custom_styles/pressed = ExtResource( 17 )
custom_styles/focus = ExtResource( 17 )
custom_styles/disabled = ExtResource( 17 )
custom_styles/normal = ExtResource( 17 )
text = "Queen"

[node name="MenuBox" type="HBoxContainer" parent="Game/HUD"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -152.0
margin_right = 152.0
margin_bottom = 40.0

[node name="Draw" type="Button" parent="Game/HUD/MenuBox"]
margin_right = 150.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = SubResource( 11 )
custom_styles/hover = ExtResource( 17 )
custom_styles/pressed = ExtResource( 17 )
custom_styles/focus = ExtResource( 17 )
custom_styles/disabled = ExtResource( 17 )
custom_styles/normal = ExtResource( 17 )
text = "Offer a Draw"

[node name="Resign" type="Button" parent="Game/HUD/MenuBox"]
margin_left = 154.0
margin_right = 304.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = SubResource( 11 )
custom_styles/hover = ExtResource( 17 )
custom_styles/pressed = ExtResource( 17 )
custom_styles/focus = ExtResource( 17 )
custom_styles/disabled = ExtResource( 17 )
custom_styles/normal = ExtResource( 17 )
text = "Resign"

[node name="RewindBox" type="HBoxContainer" parent="Game/HUD"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -152.0
margin_right = 152.0
margin_bottom = 40.0

[node name="Undo" type="Button" parent="Game/HUD/RewindBox"]
margin_right = 150.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = SubResource( 11 )
custom_styles/hover = ExtResource( 17 )
custom_styles/pressed = ExtResource( 17 )
custom_styles/focus = ExtResource( 17 )
custom_styles/disabled = ExtResource( 17 )
custom_styles/normal = ExtResource( 17 )
disabled = true
text = "Undo"

[node name="Redo" type="Button" parent="Game/HUD/RewindBox"]
margin_left = 154.0
margin_right = 304.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = SubResource( 11 )
custom_styles/hover = ExtResource( 17 )
custom_styles/pressed = ExtResource( 17 )
custom_styles/focus = ExtResource( 17 )
custom_styles/disabled = ExtResource( 17 )
custom_styles/normal = ExtResource( 17 )
disabled = true
text = "Redo"

[node name="BackPanel" type="Button" parent="Game/HUD"]
visible = false
margin_right = 100.0
margin_bottom = 40.0
size_flags_horizontal = 2
size_flags_vertical = 2
theme = SubResource( 13 )
custom_styles/hover = ExtResource( 17 )
custom_styles/pressed = ExtResource( 17 )
custom_styles/focus = ExtResource( 17 )
custom_styles/disabled = ExtResource( 17 )
custom_styles/normal = ExtResource( 17 )

[node name="BackToMenu" type="TextureRect" parent="Game/HUD/BackPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 120.0
margin_bottom = 121.0
grow_vertical = 2
rect_scale = Vector2( 0.3, 0.3 )
hint_tooltip = "Back to Menu"
texture = ExtResource( 4 )

[node name="FileDialog" type="FileDialog" parent="Game/HUD"]
margin_left = 60.0
margin_top = 80.0
margin_right = 760.0
margin_bottom = 570.0
theme = ExtResource( 28 )
custom_colors/file_icon_modulate = Color( 0.909804, 0.670588, 0.435294, 1 )
window_title = "Open a File"
mode = 0
access = 2

[node name="LoadError" type="AcceptDialog" parent="Game/HUD"]
margin_left = 435.0
margin_top = 280.0
margin_right = 585.0
margin_bottom = 345.0
theme = ExtResource( 28 )
window_title = "Loading Error"

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 40, 0 )
current = true
zoom = Vector2( 2.2, 2.2 )

[connection signal="pressed" from="Game/HUD/NotationPanel/SaveLoad/SaveGame" to="Save" method="_on_SaveGame_pressed"]
[connection signal="pressed" from="Game/HUD/NotationPanel/SaveLoad/LoadGame" to="Load" method="_on_LoadGame_pressed"]
[connection signal="pressed" from="Game/HUD/EndGame/SaveGame" to="Save" method="_on_SaveGame_pressed"]
[connection signal="pressed" from="Game/HUD/DrawOffer/Accept" to="Multiplayer" method="_on_Accept_pressed"]
[connection signal="pressed" from="Game/HUD/DrawOffer/Decline" to="Multiplayer" method="_on_Decline_pressed"]
[connection signal="pressed" from="Game/HUD/MenuBox/Draw" to="Multiplayer" method="_on_Draw_pressed"]
[connection signal="pressed" from="Game/HUD/MenuBox/Resign" to="Multiplayer" method="_on_Resign_pressed"]
[connection signal="pressed" from="Game/HUD/BackPanel" to="Singleplayer" method="_on_BackPanel_pressed"]
[connection signal="file_selected" from="Game/HUD/FileDialog" to="Load" method="_on_FileDialog_file_selected"]
